complete user page

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script src="https://kit.fontawesome.com/2599cd2f6a.js" crossorigin="anonymous"></script>
-    <title>React Template</title>
+    <title>T E M P O</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
